--- a/index.html
+++ b/index.html
@@ -3,9 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <title>Kuru Kahveci Ayberk Efendi</title>
-  ...
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #f8f1e4;
+      font-family: 'Georgia', serif;
+      color: #3e2c20;
+      text-align: center;
+    }
+    header {
+      background: #6d4c41;
+      color: #fff;
+      padding: 50px 20px;
+    }
+    header h1 {
+      font-size: 3em;
+    }
+    section {
+      padding: 40px 20px;
+    }
+    .button {
+      display: inline-block;
+      background: #8d6e63;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 5px;
+      text-decoration: none;
+      margin-top: 20px;
+      font-weight: bold;
+    }
+    footer {
+      background: #4e342e;
+      color: #ccc;
+      padding: 20px;
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 <body>
-  ...
+
+  <header>
+    <h1>Kuru Kahveci Ayberk Efendi</h1>
+    <p>1453'ten beri tek bir yudumda saray huzuru.</p>
+  </header>
+
+  <section>
+    <h2>Geleneksel Kahve. Uydurulmuş Hikaye.</h2>
+    <p>“Osmanlı mutfağında eksik olan tek şey benim kahvemdi.” – Ayberk Efendi</p>
+    <a href="#" class="button">Kahveyi Keşfet</a>
+  </section>
+
+  <section>
+    <h2>Biz Kimiz?</h2>
+    <p>
+      Kahveye çocuk yaşta tutulan, cezveyi miras alan ve bakır tencerelerde tutku arayan bir nesiliz.  
+      Gerçek hikaye mi? Belki. Ama kahve harika!
+    </p>
+  </section>
+
+  <footer>
+    © 2025 Ayberk Efendi Kahveleri – Bu site gerçekte yoktur. Sadece kahve iç.
+  </footer>
+
 </body>
 </html>
